traefik_ingress/whoami-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "foo"
  namespace: test-traefik
  labels:
    routes: true
spec:
  rules:
    - http:
        paths:
          - path: /bar
            backend:
              serviceName: whoami-service
              servicePort: 7200
          - path: /foo
            backend:
              serviceName: whoami-service
              servicePort: 7200
